# voyc

./: !  .gitignore  AppImageBuilder.yml  CHANGELOG.md  GEMINI.md  README.md  RELEASE_NOTES_v1.1.0.md  com.voyc.app.desktop  com.voyc.app.metainfo.xml  config.json.default  index.html  install-user.sh  install.sh  latest.json  org.voyc.Voyc.yml  package.json  secret  tailwind.config.js  tsconfig.json  tsconfig.tests.json  voyc.desktop
.cleo/: .context-alert-state.json  .context-state-session_20260127_204145_3b8b76.json  .context-state-session_20260128_171605_5d7969.json  .context-state.json  .current-session  .git-checkpoint-state  .sequence  config.json  migrations.json  project-info.json  sessions.json  todo-archive.json  todo-log.json  todo.json
.cleo/research/: 2026-01-27_autostart-lifecycle.md  2026-01-27_build-ts-gjs-gtk4-tooling.md  2026-01-27_config-system-xdg-paths.md  2026-01-27_dictation-orchestration.md  2026-01-27_elevenlabs-realtime-stt.md  2026-01-27_logging-metrics-privacy.md  2026-01-27_pipewire-audio-capture.md  2026-01-27_portal-global-hotkeys.md  2026-01-27_postprocessing-pipeline.md  2026-01-27_stt-provider-elevenlabs.md  2026-01-27_test-plan-smoke-tests.md  2026-01-27_tray-ui-settings.md  2026-01-27_wayland-text-injection.md
.cleo/schemas/: agent-registry.json  agent-registry.schema.json  config.schema.json  contribution.schema.json  project-info.schema.json  research-manifest.schema.json  skillsmp.schema.json
.cleo/templates/: AGENT-INJECTION.md
.github/workflows/: build.yml  release.yml
appimage/: README.md  com.voyc.app.desktop
claudedocs/: prd.md
claudedocs/agent-outputs/: 2026-01-27_legitimization-research.md  2026-01-27_tray-research.md  2026-01-27_validation-report-gtk4.md  (+15 more)
docs/: RELEASE.md  TEST_PLAN.md
scripts/: build-release.sh  build.js  bump-version.sh  generate-changelog.sh  install-local.sh  release.sh  rpm-postinstall.sh  rpm-postremove.sh  run-appimage.sh
src/: App.css  App.tsx  bindings.ts  index.css  main-simple.ts  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: updater.key.pub
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/models/: silero_vad_v4.onnx
src-tauri/src/: cloud_stt.rs  desktop_integration.rs  dictation.rs  hotkey.rs  lib.rs  llm_client.rs  main.rs  overlay.rs  settings.rs  text_injection.rs  tray.rs  utils.rs  wayland_shortcuts.rs
src-tauri/src/audio_toolkit/: mod.rs
src-tauri/src/commands/: audio.rs  dictation.rs  hotkey.rs  mod.rs  text_injection.rs  transcription.rs
src-tauri/src/managers/: audio.rs  model.rs  transcription.rs
tests/: config.test.ts  run-smoke-tests.sh  updates.test.ts
(+117 files in other folders)
