[package]
name = "voyc"
version = "2026.2.11"
description = "Voyc - Voice dictation for Linux"
authors = ["Voyc Contributors"]
edition = "2021"
license = "MIT"
default-run = "voyc"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voyc_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.10", features = [
  "protocol-asset",
  "tray-icon",
  "image-png",
] }
tauri-plugin-log = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
tauri-plugin-os = "2.3"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-process = "2.3"
tauri-plugin-fs = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
hound = "3.5.1"
log = "0.4.25"
env_filter = "0.1.0"
tokio = "1.43.0"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
rodio = { git = "https://github.com/cjpais/rodio.git" }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
rustfft = "6.4.0"
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2.3"
tar = "0.4.44"
flate2 = "1.0"
transcribe-rs = { version = "0.2.2", features = ["whisper", "parakeet", "moonshine"] }
ferrous-opencc = "0.2.3"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
# XDG Desktop Portal for Wayland global shortcuts (GNOME 48+, KDE Plasma 6+)
ashpd = { version = "0.10", features = ["tokio", "raw_handle"] }
zbus = "5"
raw-window-handle = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-single-instance = "2.3"
tauri-plugin-updater = "2.10"

[profile.release]
lto = true
codegen-units = 1
strip = false  # Required for Tauri updater to work
panic = "abort"
